Create PositionsList and cache stock data requests
