# server/controller/user.controller.js
@@ -1,6 +1,10 @@
 const yahooFinance = require("yahoo-finance2").default;
 const Position = require("../models/position.model");
 const User = require("../models/user.model");
+const {
+	fetchStockData,
+	fetchHistoricalStockData,
+} = require("../utils/requests");
 
 exports.allAccess = (req, res) => {
 	res.status(200).send("Public Content.");
@@ -35,32 +39,30 @@ exports.getPortfolioValue = async (req, res) => {
 	let portfolioValue = 0; //user.cash
 	let portfolioPrevCloseValue = 0;
 
-	// Create array of how many of each ticker (no duplicates)
+	// Create array of how many of each symbol (no duplicates)
 	let positionsNoDupes = user.positions.reduce((acc, position) => {
-		if (!acc[position.ticker]) {
-			acc[position.ticker] = position.quantity;
+		if (!acc[position.symbol]) {
+			acc[position.symbol] = position.quantity;
 		} else {
-			acc[position.ticker] += position.quantity;
+			acc[position.symbol] += position.quantity;
 		}
 		return acc;
 	}, {});
 
 	let promises = [];
 
-	// Loop through each ticker and fetch current price
-	for (let ticker in positionsNoDupes) {
-		promises.push(yahooFinance.quote(ticker));
+	// Loop through each symbol and fetch current price
+	for (let symbol in positionsNoDupes) {
+		promises.push(fetchStockData(symbol));
 	}
 
 	Promise.all(promises)
 		.then((values) => {
 			// Sum up the value of all positions
 			for (let i = 0; i < values.length; i++) {
-				portfolioValue +=
-					values[i].regularMarketPrice * Object.values(positionsNoDupes)[i];
+				portfolioValue += values[i].price * Object.values(positionsNoDupes)[i];
 				portfolioPrevCloseValue +=
-					values[i].regularMarketPreviousClose *
-					Object.values(positionsNoDupes)[i];
+					values[i].prevClose * Object.values(positionsNoDupes)[i];
 			}
 
 			res.status(200).send({ portfolioValue, portfolioPrevCloseValue });
